--- a/_talks/2023-08-30-SASP.md
+++ b/_talks/2023-08-30-SASP.md
@@ -4,7 +4,7 @@ pain in a volatile learning environment"
 collection: talks
 type: "Prize-winning talk"
 permalink: /talks/2023-08-30-SASP
-venue: "Copenhagen, Scandinavian Association for the Study of Pain"
+venue: "Scandinavian Association for the Study of Pain"
 date: 2022-10-13
 slidesurl: '/files/SASP 2022 JFE.pdf'
 location: "Copenhagen, Denmark"
@@ -22,4 +22,4 @@ This meant i was invited to give an oral presentation at my first scientific con
 
 I presented what had been my bachelor thesis, which investigated learning, thermosensation and the Thermal Grill Illusion which produces painful percepts from innocous stimulation.
 
-The finish and published paper (pre-print for now) can be found [here](https://JesperFischer.github.io/files/Uncertainty-in-Thermosensory-Expectations.pdf).
+The published paper (pre-print for now) can be found [here](https://JesperFischer.github.io/files/Uncertainty-in-Thermosensory-Expectations.pdf).
