--- a/_talks/2023-08-30-SASP.md
+++ b/_talks/2023-08-30-SASP.md
@@ -22,4 +22,5 @@ This meant i was invited to give an oral presentation at my first scientific con
 
 I presented what had been my bachelor thesis, which investigated learning, thermosensation and the Thermal Grill Illusion which produces painful percepts from innocous stimulation.
 
-The published paper (pre-print for now) can be found [here](https://JesperFischer.github.io/files/Uncertainty-in-Thermosensory-Expectations.pdf).
+The pre-print can be found [here](https://JesperFischer.github.io/files/Uncertainty-in-Thermosensory-Expectations.pdf).
+The published paper can be found [here](https://www.science.org/doi/10.1126/sciadv.adq0261).
