--- a/_posts/2025-01-04-Priors.md
+++ b/_posts/2025-01-04-Priors.md
@@ -60,7 +60,7 @@ Now importantly we can plot it ensuring ourselves that it makes sense
 data.frame() %>% ggplot(aes(x =x,y = y))+geom_point()+theme_classic()
 ```
 
-![](../images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
+![](/images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-2-1.png)<!-- -->
 
 In the “Model fitting to simulated data.Rmd” we wrote a stan model and
 ran the model without problems, without any explicit prior
@@ -220,7 +220,7 @@ df  %>%
 
     ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 
-![](../images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
+![](/images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
 Here I display the means of the two parameters b and
 ![\sigma](https://latex.codecogs.com/png.latex?%5Csigma "\sigma") as
 facets and the colors of the histograms as the standard deviations.
@@ -290,7 +290,7 @@ df %>%
   theme(legend.position = "top")
 ```
 
-![](../images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+![](/images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
 ## Fitting a model with priors
 
@@ -465,7 +465,7 @@ as_draws_df(fit$draws(c("a","b","sigma"))) %>%
 
     ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 
-![](../images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+![](/images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
 
 Or as densities:
 
@@ -484,7 +484,7 @@ as_draws_df(fit$draws(c("a","b","sigma"))) %>%
 
     ## Warning: Dropping 'draws_df' class as required metadata was removed.
 
-![](../images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+![](/images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
 
 Overlaying the mean predictions on the data.
 
@@ -503,7 +503,7 @@ as_draws_df(fit$draws(c("a","b","sigma"))) %>%
 
     ## Warning: Dropping 'draws_df' class as required metadata was removed.
 
-![](../images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
+![](/images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
 
 We can also overlay the 95 % prediction interval, by including sigma.
 
@@ -532,7 +532,7 @@ as_draws_df(fit$draws(c("a","b","sigma"))) %>%
 
     ## Warning: Dropping 'draws_df' class as required metadata was removed.
 
-![](../images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
+![](/images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
 
 So we see again that the model fits the data nicely, but we haven’t
 looked at the marginal posterior parameter estimates (the histograms of
@@ -563,7 +563,7 @@ rbind(
 
     ## `stat_bin()` using `bins = 30`. Pick better value with `binwidth`.
 
-![](../images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
+![](/images/Bayesian-Workflow-Tutorials/2025-01-04-Priors_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
 
 The difference between the prior and posterior distribution of the
 parameters is thus what is learned about the parameter after “seeing”
